[gd_scene load_steps=7 format=3 uid="uid://b07yf2b5ashmd"]

[ext_resource type="Texture2D" uid="uid://bgi8q2o5qu2om" path="res://Assets/sprites/tilesets/grass.png" id="1_1iseu"]
[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_l5u5i"]
[ext_resource type="FontFile" uid="uid://cmwhblhvoakui" path="res://Assets/Fonts/Coffee Soda.otf" id="3_hpu35"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_21roc"]
texture = ExtResource("1_1iseu")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5mxm"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ucj46"]
bg_color = Color(1, 1, 1, 0.392157)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l5u5i")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_21roc")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.400174
anchor_top = 0.0756173
anchor_right = 0.646701
anchor_bottom = 0.183642
grow_horizontal = 2
theme_override_colors/font_color = Color(0.988235, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_hpu35")
theme_override_font_sizes/font_size = 51
text = "YOU DIED :(
"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.273438
anchor_top = 0.277778
anchor_right = 0.841146
anchor_bottom = 0.33179
offset_top = -1.52588e-05
scale = Vector2(0.904851, 0.904851)
theme_override_fonts/font = ExtResource("3_hpu35")
theme_override_font_sizes/font_size = 25
text = "Congratulations, you survived for 10 secods. Good job!"
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -59.5
offset_right = 51.0
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.93137, 1.7551)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 25

[node name="Replay" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_hpu35")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_a5mxm")
theme_override_styles/normal = SubResource("StyleBoxFlat_ucj46")
text = "Try again?"

[node name="MainMenu" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_hpu35")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_a5mxm")
theme_override_styles/normal = SubResource("StyleBoxFlat_ucj46")
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer2/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="VBoxContainer2/MainMenu" to="." method="_on_main_menu_pressed"]
